--- a/home.html
+++ b/home.html
@@ -20,19 +20,16 @@
 <body> 
 
 <header class="header">
-<div id="header">
     <div class = "container-fluid">
         <div class="row">
-            <div class="col-sm-6">
-            <a href="home.html"><img class="left" src="img/Logo_Henry_New.jpg" alt=""
-            /></a>
+            <div id="header">
+                <div class="col-sm-6">
+                <a href="home.html"><img class="left" src="img/Logo_Henry_New.jpg" alt=""/></a>
+                </div>
             </div>
-        </div>
-</div>
-</header>
 
-<nav>
-        <class="list-inline">
+            <div id="nav">
+        <ul class="list-inline">
             <li><a href="eye.html" class="eye"><font color="#00aeed"> eye </font><br>
                 <img src="img/eye1.png" onmouseover="this.src='img/eye2.png'" onmouseout="this.src='img/eye1.png'" height="100" width="100"/ alt="eye"/> </a>
             <li><a href="mouth.html" class="mouth"><font color="#b20000">mouth </font><br>
