--- a/ear.html
+++ b/ear.html
@@ -23,24 +23,18 @@
 
 <body background="img/record.gif" alt="Record player spinning some tunes">
 
-<section id="header">
-<div class = "container-fluid">
-    <div class="row">
-        <div class="col-sm-4">
-    <header>
-        <a href="home.html"><img class="left" src="img/Logo_Henry_New.jpg" alt=""
-            /></a>
-        </div>
-    </div>
-</div>
-</section>
 
-<section id="navigation">
+<header class="header">
     <div class = "container-fluid">
-    <div class="row">
-        <div class="col-sm-8">
-<nav>
-        <ul class="right">
+        <div class="row">
+            <div id="header">
+                <div class="col-sm-6">
+                <a href="home.html"><img class="left" src="img/Logo_Henry_New.jpg" alt=""/></a>
+                </div>
+            </div>
+
+            <div id="nav">
+        <ul class="list-inline">
             <li><a href="eye.html" class="eye"><font color="#00aeed"> eye </font><br>
                 <img src="img/eye1.png" onmouseover="this.src='img/eye2.png'" onmouseout="this.src='img/eye1.png'" height="100" width="100"/ alt="eye"/> </a>
             <li><a href="mouth.html" class="mouth"><font color="#b20000">mouth </font><br>
