--- a/eye.html
+++ b/eye.html
@@ -17,12 +17,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
 
-<body> 
-
-<body class="eye">
-
-<body background="img/banff.gif" alt="Me at Banff Lake Louise">
-
+<body class="eye" background="img/banff.gif">
 
 <header class="header">
     <div class = "container-fluid">
@@ -35,18 +30,17 @@
 
             <div id="nav">
         <ul class="list-inline">
-            <li><a href="eye.html" class="eye"><font color="#00aeed"> eye </font><br>
-                <img src="img/eye1.png" onmouseover="this.src='img/eye2.png'" onmouseout="this.src='img/eye1.png'" height="100" width="100"/ alt="eye"/> </a>
-            <li><a href="mouth.html" class="mouth"><font color="#b20000">mouth </font><br>
+            <li><a href="eye.html" class="eye">
+                <img src="img/eye1.png" onmouseover="this.src='img/eye2.png'" onmouseout="this.src='img/eye1.png'" height="100" width="100" alt="eye"/> </a>
+            <li><a href="mouth.html" class="mouth">
                 <img src="img/mouth1.png" onmouseover="this.src='img/mouth2.png'" onmouseout="this.src='img/mouth1.png'" height="100" width="100" alt="mouth"/> </a>
-            <li><a href="ear.html" class="ear"><font color="#ff68ff">ear </font><br>
+            <li><a href="ear.html" class="ear">
                 <img src="img/ear1.png" onmouseover="this.src='img/ear2.png'" onmouseout="this.src='img/ear1.png'" height="100" width="100" alt="Student pondering inside a Brazilian home"/> </a>
         </ul>
-</nav>
         </div>
     </div>
 </div>
-</section>
+</header>
 
 <div class="container">
 <div class="jumbotron">
@@ -77,11 +71,11 @@
 
 <section id = "footer" style="background-color: white; position: static;">
 <div class ="container">
-    <p class="pull-left">&copy2016 BHP</p>
+    <p class="pull-left"> &copy;2016 BHP</p>
     <div class="pull-right">
         <ul class="list-inline">
             <li><a href="mailto:patterbh@umich.edu">contact</a></li>
-            <li><a href="https://www.instagram.com/thebrandonshowww/"><i class="fa fa-instagram" text-center></i></a></li> 
+            <li><a href="https://www.instagram.com/thebrandonshowww/"><i class="fa fa-instagram"></i></a></li> 
             <li><a href="https://www.linkedin.com/in/pattersonbh"><i class="fa fa-linkedin"></i></a></li>
         </ul>
     </div>
