--- a/ear.html
+++ b/ear.html
@@ -17,7 +17,9 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
 
-<body class="ear" background="img/record.gif">
+<body class="ear">
+
+    <!--background="img/record.gif"-->
 
 <header class="header">
     <div class = "container-fluid">
