--- a/eye.html
+++ b/eye.html
@@ -17,7 +17,8 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
 
-<body class="eye" background="img/banff.gif">
+<body class="eye">
+</div>
 
 <header class="header">
     <div class = "container-fluid">
@@ -80,6 +81,7 @@
         </ul>
     </div>
 </div>
+
 </section>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
