--- a/mouth.html
+++ b/mouth.html
@@ -17,7 +17,9 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
 
-<body class="mouth" background="img/fire.gif">
+<body class="mouth">
+
+    <!--background="img/fire.gif"-->
 
 <header class="header">
     <div class = "container-fluid">
